test_suite/tests/ui/conflict/adjacent-tag.stderr
error: enum tags `conflict` for type and content conflict with each other
  --> $DIR/adjacent-tag.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

